--- a/twitter_sim_eda.ipynb
+++ b/twitter_sim_eda.ipynb
@@ -2,37 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install --user ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing c:\\users\\dmbes\\onedrive\\cmu\\classes\\simulation\\project\\twitter_sim\n",
-      "    Complete output from command python setup.py egg_info:\n",
-      "    running egg_info\n",
-      "    creating pip-egg-info\\twitter_sim.egg-info\n",
-      "    writing pip-egg-info\\twitter_sim.egg-info\\PKG-INFO\n",
-      "    writing dependency_links to pip-egg-info\\twitter_sim.egg-info\\dependency_links.txt\n",
-      "    writing requirements to pip-egg-info\\twitter_sim.egg-info\\requires.txt\n",
-      "    writing top-level names to pip-egg-info\\twitter_sim.egg-info\\top_level.txt\n",
-      "    writing manifest file 'pip-egg-info\\twitter_sim.egg-info\\SOURCES.txt'\n",
-      "    error: package directory 'twitter_sim' does not exist\n",
-      "    \n",
-      "    ----------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Command \"python setup.py egg_info\" failed with error code 1 in C:\\Users\\dmbes\\AppData\\Local\\Temp\\pip-req-build-6i802gg1\\\n"
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (__init__.py, line 118)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"C:\\Users\\dmbes\\Anaconda3\\envs\\ml-env\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3296\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-c5cc5ffe8bbd>\"\u001b[1;36m, line \u001b[1;32m1\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import twitter_sim\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\dmbes\\OneDrive\\CMU\\Classes\\Simulation\\project\\twitter_sim\\twitter_sim\\__init__.py\"\u001b[1;36m, line \u001b[1;32m118\u001b[0m\n\u001b[1;33m    F = nx.scale_free_graph(size)\u001b[0m\n\u001b[1;37m                                 ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
-    "!pip install --user ."
+    "import twitter_sim\n",
+    "all_beliefs,total_tweets, G = twitter_sim.run(size = 100, \n",
+    "                                  perc_bots = 0.12, \n",
+    "                                  strategy = 'normal', \n",
+    "                                  polarized = 'polarized')"
    ]
   }
  ],
